--- a/app/src/main/res/layout/item_medicine.xml
+++ b/app/src/main/res/layout/item_medicine.xml
@@ -20,7 +20,8 @@
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_gravity="center"
-            android:src="@drawable/ic_profile" />
+            android:layout_margin="10dp"
+            android:src="@drawable/ic_profile"/>
 
         <TextView
             android:id="@+id/text_view_description"
@@ -29,6 +30,7 @@
             android:layout_gravity="center"
             android:layout_weight="1"
             android:ellipsize="end"
+            android:textSize="20sp"
             android:maxLines="3"
             android:text="@string/medicine_description" />
 
@@ -47,9 +49,9 @@
             <ImageButton
                 android:id="@+id/btnAdd"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:src="@drawable/star_fill"/>
+                android:layout_height="match_parent"
+                android:layout_gravity="center|bottom"
+                android:src="@drawable/star_fill" />
         </LinearLayout>
 
     </LinearLayout>
