--- a/app/src/main/res/values/medicines.xml
+++ b/app/src/main/res/values/medicines.xml
@@ -16,4 +16,231 @@
         <item>Аминофенилмасляная кислота</item>
         <item>Фабомотизол</item>
     </string-array>
+    <string-array name="medicine_types">
+        <item>Анальгетик</item>
+        <item>НПВС</item>
+        <item>Анальгетик</item>
+        <item>Спазмолитик</item>
+        <item>Спазмолитик</item>
+        <item>Антисептик</item>
+        <item>Антисептик</item>
+        <item>Антисептик</item>
+        <item>Перевязочные материалы</item>
+        <item>Седативное средство</item>
+        <item>Седативное средство</item>
+        <item>Седативное средство</item>
+        <item>Ноотроп</item>
+        <item>Анксиолитик</item>
+    </string-array>
+    <string-array name="medicine_details">
+        <item>
+            <![CDATA[
+            <b>Парацетамол</b>
+            <br/>
+            <br/>
+            <b>Описание:</b> Ненаркотический анальгетик, обладающий обезболивающим и жаропонижающим действием.
+            <br/>
+            <b>Дозировка:</b> Взрослым по 500-1000 мг до 4 раз в сутки. Максимальная суточная доза - 4000 мг.
+            <br/>
+            <b>Побочные эффекты:</b> Аллергические реакции, тошнота, боли в животе, нарушения функции печени (при длительном приеме).
+            <br/>
+            <b>Взаимодействия:</b> Усиливает действие антикоагулянтов.
+            ]]>
+        </item>
+
+        <item>
+            <![CDATA[
+            <b>Ибупрофен</b>
+            <br/>
+            <br/>
+            <b>Описание:</b> Нестероидный противовоспалительный препарат (НПВП), обладающий обезболивающим, жаропонижающим и противовоспалительным действием.
+            <br/>
+            <b>Дозировка:</b> Взрослым по 200-800 мг до 4 раз в сутки. Максимальная суточная доза - 2400 мг.
+            <br/>
+            <b>Побочные эффекты:</b> Диспепсия, тошнота, изжога, головная боль, аллергические реакции, риск язвы желудка.
+            <br/>
+            <b>Взаимодействия:</b> Усиливает действие антикоагулянтов, снижает эффективность диуретиков.
+            ]]>
+        </item>
+
+        <item>
+            <![CDATA[
+            <b>Ацетилсалициловая кислота (Аспирин)</b>
+            <br/>
+            <br/>
+            <b>Описание:</b> НПВП, обладает обезболивающим, жаропонижающим и противовоспалительным действием, а также препятствует тромбообразованию.
+            <br/>
+            <b>Дозировка:</b> Взрослым по 40-1000 мг в сутки. Максимальная суточная доза - 4000 мг.
+            <br/>
+            <b>Побочные эффекты:</b> Диспепсия, изжога, тошнота, риск язвы желудка, кровотечения, аллергические реакции.
+            <br/>
+            <b>Взаимодействия:</b> Усиливает действие антикоагулянтов, снижает эффективность диуретиков.
+            ]]>
+        </item>
+
+        <item>
+            <![CDATA[
+            <b>Дротаверин (Но-шпа)</b>
+            <br/>
+            <br/>
+            <b>Описание:</b> Миотропный спазмолитик, снимает спазмы гладкой мускулатуры.
+            <br/>
+            <b>Дозировка:</b> Взрослым по 40-80 мг 2-3 раза в сутки.
+            <br/>
+            <b>Побочные эффекты:</b> Головная боль, головокружение, снижение артериального давления, аллергические реакции.
+            <br/>
+            <b>Взаимодействия:</b> Усиливает действие других спазмолитиков.
+            ]]>
+        </item>
+
+        <item>
+            <![CDATA[
+            <b>Мебеверин гидрохлорид (Дюспаталин)</b>
+            <br/>
+            <br/>
+            <b>Описание:</b> Миотропный спазмолитик, избирательно действует на гладкую мускулатуру кишечника, снимает спазмы и боль.
+            <br/>
+            <b>Дозировка:</b> Взрослым по 200 мг 2 раза в сутки.
+            <br/>
+            <b>Побочные эффекты:</b> Головная боль, головокружение, аллергические реакции.
+            <br/>
+            <b>Взаимодействия:</b> Данные о взаимодействии с другими лекарствами ограничены.
+            ]]>
+        </item>
+
+        <item>
+            <![CDATA[
+            <b>Перекись водорода</b>
+            <br/>
+            <br/>
+            <b>Описание:</b> Антисептик, оказывает дезинфицирующее действие, останавливает кровотечение.
+            <br/>
+            <b>Дозировка:</b> Используется наружно в виде раствора 3% для обработки ран.
+            <br/>
+            <b>Побочные эффекты:</b> Жжение в месте нанесения, аллергические реакции.
+            <br/>
+            <b>Взаимодействия:</b> Несовместима с щелочами, солями металлов, некоторыми органическими веществами.
+            ]]>
+        </item>
+
+        <item>
+            <![CDATA[
+            <b>Хлоргексидин</b>
+            <br/>
+            <br/>
+            <b>Описание:</b> Антисептик, обладает широким спектром антимикробного действия.
+            <br/>
+            <b>Дозировка:</b> Используется наружно в виде раствора 0,05-0,5% для обработки ран, полоскания горла.
+            <br/>
+            <b>Побочные эффекты:</b> Аллергические реакции, сухость кожи.
+            <br/>
+            <b>Взаимодействия:</b> Несовместим с мылами, анионными ПАВ.
+            ]]>
+        </item>
+
+        <item>
+            <![CDATA[
+            <b>Спирт этиловый</b>
+            <br/>
+            <br/>
+            <b>Описание:</b> Антисептик, оказывает дезинфицирующее действие.
+            <br/>
+            <b>Дозировка:</b> Используется наружно в виде раствора 70% для обработки рук, инструментов.
+            <br/>
+            <b>Побочные эффекты:</b> Сухость кожи, раздражение.
+            <br/>
+            <b>Взаимодействия:</b> Может усиливать действие некоторых лекарственных средств.
+            ]]>
+        </item>
+
+        <item>
+            <![CDATA[
+            <b>Пластыри</b>
+            <br/>
+            <br/>
+            <b>Описание:</b> Медицинские изделия для защиты ран, фиксации повязок.
+            <br/>
+            <b>Дозировка:</b> Используются по мере необходимости.
+            <br/>
+            <b>Побочные эффекты:</b> Аллергические реакции на клейкую основу.
+            <br/>
+            <b>Взаимодействия:</b> Нет данных.
+            ]]>
+        </item>
+
+        <item>
+            <![CDATA[
+            <b>Валериана</b>
+            <br/>
+            <br/>
+            <b>Описание:</b> Седативное средство растительного происхождения, оказывает успокаивающее действие.
+            <br/>
+            <b>Дозировка:</b> Индивидуально, в зависимости от формы выпуска.
+            <br/>
+            <b>Побочные эффекты:</b> Сонливость, вялость, аллергические реакции.
+            <br/>
+            <b>Взаимодействия:</b> Может усиливать действие снотворных и седативных препаратов.
+            ]]>
+        </item>
+
+        <item>
+            <![CDATA[
+            <b>Пустырник</b>
+            <br/>
+            <br/>
+            <b>Описание:</b> Седативное средство растительного происхождения, оказывает успокаивающее действие.
+            <br/>
+            <b>Дозировка:</b> Индивидуально, в зависимости от формы выпуска.
+            <br/>
+            <b>Побочные эффекты:</b> Сонливость, вялость, аллергические реакции.
+            <br/>
+            <b>Взаимодействия:</b> Может усиливать действие снотворных и седативных препаратов.
+            ]]>
+        </item>
+
+        <item>
+            <![CDATA[
+            <b>Пион</b>
+            <br/>
+            <br/>
+            <b>Описание:</b> Седативное средство растительного происхождения, оказывает успокаивающее действие.
+            <br/>
+            <b>Дозировка:</b> Индивидуально, в зависимости от формы выпуска.
+            <br/>
+            <b>Побочные эффекты:</b> Сонливость, вялость, аллергические реакции.
+            <br/>
+            <b>Взаимодействия:</b> Может усиливать действие снотворных и седативных препаратов.
+            ]]>
+        </item>
+
+        <item>
+            <![CDATA[
+            <b>Аминофенилмасляная кислота (Фенибут)</b>
+            <br/>
+            <br/>
+            <b>Описание:</b> Ноотропное средство, оказывает успокаивающее, анксиолитическое действие.
+            <br/>
+            <b>Дозировка:</b> Взрослым по 250-500 мг 2-3 раза в сутки.
+            <br/>
+            <b>Побочные эффекты:</b> Сонливость, головная боль, тошнота.
+            <br/>
+            <b>Взаимодействия:</b> Может усиливать действие снотворных и седативных препаратов.
+            ]]>
+        </item>
+
+        <item>
+            <![CDATA[
+            <b>Фамотидин</b>
+            <br/>
+            <br/>
+            <b>Описание:</b> Блокатор H2-гистаминовых рецепторов, снижает выработку желудочного сока.
+            <br/>
+            <b>Дозировка:</b> Взрослым по 20-40 мг 1-2 раза в сутки.
+            <br/>
+            <b>Побочные эффекты:</b> Головная боль, головокружение, запор, диарея.
+            <br/>
+            <b>Взаимодействия:</b> Может влиять на абсорбцию некоторых лекарственных средств.
+            ]]>
+        </item>
+    </string-array>
 </resources>
