--- a/app/src/main/res/layout/item_medicine.xml
+++ b/app/src/main/res/layout/item_medicine.xml
@@ -4,55 +4,48 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="5dp"
-    app:cardCornerRadius="@dimen/cardview_default_radius"
+    android:layout_marginBottom="3dp"
+    android:layout_marginStart="3dp"
+    android:layout_marginEnd="3dp"
+    app:cardCornerRadius="@dimen/usual"
     android:clickable="true"
     android:focusable="true">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:clickable="false">
-
-        <ImageView
-            android:id="@+id/image_view_medicine"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_gravity="center"
-            android:layout_margin="10dp"
-            android:src="@drawable/ic_profile"/>
-
-        <TextView
-            android:id="@+id/text_view_description"
+        android:orientation="horizontal">
+        <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_weight="7"
             android:layout_gravity="center"
-            android:layout_weight="1"
-            android:ellipsize="end"
-            android:textSize="20sp"
-            android:maxLines="3"
-            android:text="@string/medicine_description" />
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_marginStart="5dp"
             android:orientation="vertical">
-
             <TextView
-                android:id="@+id/text_view_price"
-                android:layout_width="wrap_content"
+                android:id="@+id/text_view_name"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:text="Цена: 0.00₽" />
-
-            <ImageButton
-                android:id="@+id/btnAdd"
+                android:textSize="20dp"
+                android:maxLines="3"
+                android:text="@string/med_name" />
+            <TextView
+                android:id="@+id/medType"
+                android:textSize="15dp"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_gravity="center|bottom"
-                android:src="@drawable/star_fill" />
+                android:layout_height="wrap_content"
+                android:hint="@string/test"/>
         </LinearLayout>
+
+        <ImageButton
+            android:layout_weight="1"
+            android:id="@+id/btnAdd"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:background="@color/white"
+            android:src="@drawable/plus_app" />
 
     </LinearLayout>
 
