Completer sign in and sign up. Change Main Navigation

--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -72,7 +72,7 @@
                 android:layout_height="50dp"
                 android:layout_marginTop="20dp"
                 android:background="@drawable/black_border"
-                android:drawableStart="@drawable/ic_password"
+                android:drawableStart="@drawable/ic_purple_password"
                 android:drawablePadding="8dp"
                 android:hint="@string/password"
                 android:inputType="textPassword"
@@ -86,7 +86,7 @@
                 android:layout_height="50dp"
                 android:layout_marginTop="20dp"
                 android:background="@drawable/black_border"
-                android:drawableStart="@drawable/ic_password"
+                android:drawableStart="@drawable/ic_purple_password"
                 android:drawablePadding="8dp"
                 android:hint="@string/confirm_password"
                 android:inputType="textPassword"
