--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -21,6 +21,9 @@
         <action
             android:id="@+id/action_MedicineListFragment_to_filterBottomSheetFragment"
             app:destination="@id/filterBottomSheetFragment" />
+        <action
+            android:id="@+id/action_MedicineListFragment_to_profileFragment"
+            app:destination="@id/profileFragment" />
 
     </fragment>
 
