--- a/app/src/main/res/layout/filter_bottom_sheet.xml
+++ b/app/src/main/res/layout/filter_bottom_sheet.xml
@@ -22,14 +22,14 @@
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="100dp"
-        android:scrollbars="vertical"
-        android:scrollbarDefaultDelayBeforeFade="@integer/material_motion_duration_long_2">
+        android:scrollbarDefaultDelayBeforeFade="@integer/material_motion_duration_long_2"
+        android:scrollbars="vertical">
 
         <com.google.android.material.chip.ChipGroup
             android:id="@+id/typeChips"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:singleSelection="false"/>
+            app:singleSelection="false" />
     </androidx.core.widget.NestedScrollView>
 
     <TextView
@@ -70,27 +70,6 @@
         android:layout_height="wrap_content"
         android:hint="Введите как принимать лекарство"
         android:inputType="numberDecimal" />
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:orientation="horizontal">
-
-        <CheckBox
-            android:id="@+id/checkBoxБезРецепт"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Без рецепта" />
-
-        <CheckBox
-            android:id="@+id/checkBox"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="16dp"
-            android:text="В наличии" />
-
-    </LinearLayout>
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/button"
