--- a/app/src/main/res/layout/fragment_medicine_list.xml
+++ b/app/src/main/res/layout/fragment_medicine_list.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.MedicineListFragment">
+    tools:context=".ui.fragments.MedicineListFragment">
     <SearchView
         android:id="@+id/textToSearch"
         android:layout_width="0dp"
