--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -64,6 +64,19 @@
                 android:background="@drawable/black_border"
                 android:drawableStart="@drawable/ic_user"
                 android:drawablePadding="8dp"
+                android:hint="@string/username"
+                android:padding="8dp"
+                android:textColor="@color/black"
+                android:textColorHighlight="@color/cardview_dark_background" />
+
+            <EditText
+                android:id="@+id/email"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_marginTop="20dp"
+                android:background="@drawable/black_border"
+                android:drawableStart="@drawable/ic_email"
+                android:drawablePadding="8dp"
                 android:hint="@string/email"
                 android:padding="8dp"
                 android:textColor="@color/black"
