--- a/app/src/main/res/layout/fragment_sign_in.xml
+++ b/app/src/main/res/layout/fragment_sign_in.xml
@@ -40,7 +40,7 @@
                 android:layout_height="50dp"
                 android:layout_marginTop="40dp"
                 android:background="@drawable/black_border"
-                android:drawableStart="@drawable/ic_user"
+                android:drawableStart="@drawable/ic_email"
                 android:drawablePadding="8dp"
                 android:hint="@string/email"
                 android:padding="8dp"
