--- a/app/src/main/res/layout/fragment_medicine_list.xml
+++ b/app/src/main/res/layout/fragment_medicine_list.xml
@@ -16,7 +16,7 @@
         app:layout_constraintBottom_toBottomOf="@id/btnFilter"
         android:layout_marginStart="5dp"
         android:layout_marginEnd="5dp"
-        android:queryHint="Вводите название или описание"/>
+        android:queryHint="Название/Описание"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/medications_list"
