--- a/app/src/main/res/layout/fragment_medicine_detail.xml
+++ b/app/src/main/res/layout/fragment_medicine_detail.xml
@@ -18,7 +18,7 @@
         app:cardCornerRadius="@dimen/usual">
         <TextView
             android:id="@+id/medicineName"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/usual"
             android:text="Название лекарства"
